fixed spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -325,7 +325,7 @@ body {
   flex-direction: column;
   align-items: center; 
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: -10px;
 
   h2 {
     margin-top: 10px;
@@ -352,8 +352,6 @@ body {
   grid-template-columns: 1fr 1fr; 
   gap: 20px;
   padding: 20px;
-  margin-bottom: px;
-
 
   .column {
     display: flex;
@@ -367,7 +365,7 @@ body {
       margin-bottom: 0px;
       font-style: normal;
       margin-bottom: 15px;
-      margin-top: 30px;
+      margin-top: 25px;
   
     }
   
